Fixed Sidebar tabs overlapping

--- a/files/style.css
+++ b/files/style.css
@@ -73,7 +73,7 @@ html {  height: 100%;}
 
     
     height: 40px;
-    width: 100px;
+    width: auto;
     background-color: rgba(0, 0, 0, 0);
     transition: .5s;
 }
@@ -89,7 +89,7 @@ html {  height: 100%;}
 
     
     height: 40px;
-    width: 100px;
+    width: auto;
     background-color: rgba(0, 0, 0, 0);
     transition: .5s;
 }
@@ -105,7 +105,7 @@ html {  height: 100%;}
 
     
     height: 40px;
-    width: 100px;
+    width: auto;
     background-color: rgba(0, 0, 0, 0);
     transition: .5s;
 }
